--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <span>PRODUCT</span>
             <span>FEATURES</span>
             <span>PRICING</span>
-            <span> •</span>
-            <span>LOGIN</span>
+            <span class="login"> •</span>
+            <span class="login">LOGIN</span>
             </div>
         </div>
         <div class="img"></div>
